[package]
name = "sql-js-httpvfs-rs"
version = "0.0.1"
edition = "2021"
description = "A very experimental, basic, and slightly ridiculous-sounding Rust wrapper around sql.js-httpvfs"
license = "Apache-2.0"
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/ClementTsang/sql.js-httpvfs-rs"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
bundled = []
